@@ -9,6 +9,14 @@
 	implementation.
 	* tests/mpz/t-bin.c: Extend tests, to cover _goetgheluck.
 
+	* mpz/primorial_ui.c: New file.
+	* mpz/Makefile.am (libmpz_la_SOURCES): Add mpz/primorial_ui.c
+	* Makefile.am (MPZ_OBJECTS): Add mpz/primorial_ui$U.lo
+	* gmp-h.in (mpz_primorial_ui): Declare.
+
+	* tests/mpz/t-primorial_ui.c: New test for the new function.
+	* tests/mpz/Makefile.am (check_PROGRAMS): Add t-primorial_ui.
+
 2012-04-17  Torbjorn Granlund  <tege@gmplib.org>
 
 	* mpn/x86_64/coreisbr/aorsmul_1.asm: Fix some DOS64 issues.
